# logix-trend-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
logix_trend_converter/: converter.py  dbf.py  logix_trend_converter.py
tests/: test_logix_trend_converter.py
