[tool.poetry]
name = "logix-trend-converter"
version = "0.1.0"
description = "A tool for converting RSLogix 5/500/5000 data trend files (with *.DBF file format) to more friendly formats."
authors = ["Justin Minnion <justin@minnion.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jminnion/logix-trend-converter"
keywords = ["rstrendx", "rslogix", "plc5", "slc500", "dbf", "rockwell", "allen-bradley"]
packages = [{include = "logix_trend_converter"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
